@@ -98,7 +98,6 @@ EXEC 01;32
 .t7z 01;31
 .zip 01;31
 .z   01;31
-.Z   01;31
 .dz  01;31
 .gz  01;31
 .lrz 01;31
